Route GET / working, also checking if a MongoDB Uri, as a string, is passed, and returning an error otherwise

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production nodemon mock.js",
-    "dev": "cross-env NODE_ENV= nodemon mock.js"
+    "dev": "cross-env NODE_ENV=development nodemon mock.js"
   },
   "author": "Nicolas Ramirez <nicolas.ramirez.ka@gmail.com>",
   "license": "MIT",
