--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Nicolas Ramirez <nicolas.ramirez.ka@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.8.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.8",
-    "mongoose": "^5.3.4"
+    "validator": "^10.8.0"
   }
 }
